<resources>
    <string name="app_name">Desafio 3 DSM</string>
    <string name="welcome_message">¡Bienvenido a AprendeApp!</string>
    <string name="login_title">Iniciar Sesión</string>
    <string name="register_title">Crear Cuenta</string>
    <string name="email_hint">Correo electrónico</string>
    <string name="password_hint">Contraseña</string>
    <string name="nombre_hint">Nombre completo</string>
    <string name="btn_login">Ingresar</string>
    <string name="btn_register">Registrarse</string>
    <string name="btn_logout">Cerrar Sesión</string>
    <string name="no_account">¿No tienes cuenta? Regístrate</string>
    <string name="yes_account">¿Ya tienes cuenta? Inicia sesión</string>
    <string name="role_estudiante">Estudiante</string>
    <string name="role_docente">Docente</string>
    <string name="select_role">Selecciona tu rol</string>
    <string name="error_campos_vacios">Por favor completa todos los campos</string>
    <string name="error_email_invalido">Correo electrónico no válido</string>
    <string name="error_login">Correo o contraseña incorrectos</string>
    <string name="success_register">¡Cuenta creada exitosamente!</string>
    <string name="loading">Cargando...</string>
</resources>